--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@keyframes fallingPaint {
+    0% {top: -50;}
+    100% {top: 140%;}
+}
+
 html, body {
     height: 100%;
     margin: 0;
@@ -12,9 +17,20 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.8);
     opacity: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
+}
+
+#paintBall {
+    position: absolute;
+    left: 300px;
+    top: -50px;
+    width: 40px;
+    height: 40px;
+    color: red;
+    border-radius: 50%;
+    background-color: red;
 }
