--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@
     100% {top: 110%;}
 }
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font: inherit;
+}
+
 html, body {
     height: 100%;
     margin: 0;
@@ -44,7 +51,7 @@ main {
     border: 1px solid red;
 }
 
-#idk {
+#workersUpg {
     grid-area: rigt1;
     border: 1px solid black;
 }
@@ -60,6 +67,22 @@ main {
     margin: auto;
     text-align: center;
     margin-top: 30px;
+}
+
+#basicHammer {
+    width: fit-content;
+}
+
+#basicHammerTT {
+    position: absolute;
+    border-radius: 10px;
+    border: 4px solid black;
+    text-align: center;
+    display: none;
+}
+
+#basicHammer:hover #basicHammerTT {
+    display: block;
 }
 
 .textOverskrift {
@@ -96,6 +119,10 @@ main {
 
 #introColor {
     display: none;
+    text-align: center;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
 }
 
 #miniGame {
