--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ main {
 #paintUpg {
     grid-area: lft2;
     border: 1px solid red;
+    display: none;
 }
 
 #workersUpg {
@@ -107,6 +108,19 @@ main {
     width: 100%;
     height: 100%;
     z-index: -1;
+}
+
+#confirmJob {
+    width: 300px;
+    height: 530px;
+    background-color: white;
+    text-align: center;
+    font-size: 2rem;
+}
+
+#picOfPerson {
+    height: 350px;
+    margin: auto;
 }
 
 #paintBall {
