--- a/style.css
+++ b/style.css
@@ -141,6 +141,13 @@ main {
     font-size: 2rem;
 }
 
+#changeWorker {
+    width: 200px;
+    height: 80px;
+    background-color: white;
+    display: none;
+}
+
 #paintBall {
     position: absolute;
     top: -50px;
